# BranchPrediction

./: .gitignore  .gitmodules  README.md  READ_ME.txt  log.txt  parallel_test.py  pyproject.toml  test_parser.py
Custom Predictors/Local_History_Branch_Prediction/: Local_History_Branch_Prediction.cc
Custom Predictors/Two_Level_Local_Branch_Prediction/: Two_Level_Local_Branch_Prediction.cc
Resources/: sources.list
Resources/DesignDocs/: SystemV0.1.drawio
one_bit_branch_prediction_buffer/: one_bit_branch_prediction_buffer.cc
python/: Champsim_log.txt  READ_ME.md  READ_ME.txt  __main__.py  parallel_test.py  readme.txt  recompiler.py  size_test.py  test_parser.py  training_speed_test.py
python/Test logs/: champsim_Bi-Mode_log.txt  champsim_bimodal_log.txt  champsim_gshare_log.txt  champsim_perceptron_log.txt
python/Test_logs/: local_history1024k462.libquantum-1343B.champsimtrace.xz.json
python/Trace_tests/: champsim_Bi-Mode.csv  champsim_Jack.csv  champsim_Local_History_Branch_Prediction.csv  champsim_Two_Level_Local_Branch_Prediction.csv  champsim_bimodal.csv  champsim_gshare.csv  champsim_hashed_perceptron.csv  champsim_one_bit_branch_prediction_buffer.csv  champsim_perceptron.csv  gshare.csv  perceptron.csv
python/Trace_tests(storage)/: Jack.csv  bimodal.csv  hashed_perceptron.csv  perceptron.csv
python/types/: CmpSimOut.py
